# HelloXBotCore

./: CMakeLists.txt  README.md
cmake/: BuildHelloXBotCore.cmake
include/: HelloXBotCore.h
include/HelloXBotCore/: HelloXBotCore_plugin.h
src/: HelloXBotCore.cpp  HelloXBotCore_plugin.cpp
